first prototype for arrays (read/write)